--- a/templates/index2.html
+++ b/templates/index2.html
@@ -13,7 +13,7 @@
 
   <body>
     {%if new_year %}
-      <h1>Yes!Happy New NewYear</h1>
+      <h1>Yes!Happy New Year</h1>
     {%else %}
       <h1>NO</h1>
     {%endif%}
